UPDATE: Fix Insane speed & Add Working Kingdom Config with some debugging disabled

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1633,7 +1633,7 @@ default n
 depends on CPU_FREQ && !PERFLOCK
 depends on ARCH_MSM7X30
 
-config CONFIG_INSANE_SPEEDS
+config INSANE_SPEEDS
 bool "Enable 1.92 overclock step, possibly unstable"
 default n
 depends on ACPUCLOCK_OVERCLOCKING
