--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -117,11 +117,11 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASS
 	  Use the CPUFreq governor 'smartass' as default.
 
 config CPU_FREQ_DEFAULT_GOV_SMARTASS2
-	bool "smartass"
+	bool "smartassV2"
 	select CPU_FREQ_GOV_SMARTASS2
 	select CPU_FREQ_GOV_PERFORMANCE
 	help
-	  Use the CPUFreq governor 'smartass' as default.
+	  Use the CPUFreq governor 'smartassV2' as default.
 
 config CPU_FREQ_DEFAULT_GOV_SCARY
 	bool "scary"
