--- a/arch/arm/configs/kingdom_defconfig
+++ b/arch/arm/configs/kingdom_defconfig
@@ -1258,10 +1258,13 @@ CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 CONFIG_LIBRA_SDIOIF=m
 # CONFIG_BCM4329 is not set
+CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"  	
+CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
 # CONFIG_BCMDHD is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_WL12XX_PLATFORM_DATA is not set
 # CONFIG_QUALCOMM_WLAN is not set
+CONFIG_BCM4329_248=m
 # CONFIG_BCM4330B2 is not set
 
 #
@@ -2769,7 +2772,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-CONFIG_CRYPTO_MD4=m
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
