--- a/arch/arm/configs/kingdom_defconfig
+++ b/arch/arm/configs/kingdom_defconfig
@@ -385,7 +385,9 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1401600
+CONFIG_MSM_CPU_FREQ_MIN=245760
 CONFIG_ACPUCLOCK_OVERCLOCKING=y
 CONFIG_INSANE_SPEEDS=y
 # CONFIG_MSM_AVS_HW is not set
